--- a/Assignment3/Task2_Sequence_Diagram/board_sequence_diagram.tex
+++ b/Assignment3/Task2_Sequence_Diagram/board_sequence_diagram.tex
@@ -15,7 +15,7 @@
 \pagenumbering{gobble}
 
 \maketitle
-\section{Board.getUniqueInstance(this)}
+\section{Board.getUniqueInstance(Game game)}
 \begin{figure}[H]
 	\centering
 	
@@ -35,17 +35,17 @@
 				
 				% Call constructor
 				\begin{callself}{B}{Board(game)}{}
-					\begin{mess}{B}{new Square[8][8]}{S}{}
-					\end{mess}
+					\begin{call}{B}{new Square[8][8]}{S}{squares}
+					\end{call}
 					
 					\begin{callself}{B}{initBoard()}{}
 						\begin{sdblock}{loop}{[for each column \& row in squares]}
-							\begin{messcall}{B}{new Square(column, row)}{s}
-							\end{messcall}
+							\begin{call}{B}{new Square(column, row)}{s}{square}
+							\end{call}
 						\end{sdblock}
 						
-						\begin{messcall}{B}{new PiecePot()}{PP}
-						\end{messcall}
+						\begin{call}{B}{new PiecePot()}{PP}{piecepot}
+						\end{call}
 					\end{callself}
 					
 					\begin{callself}{B}{setPieces()}{}
@@ -89,7 +89,7 @@
 			\begin{messcall}{G}{move(x1, y1, x2, y2, Color)}{B}{}	
 				\begin{call}{B}{isOccupied()}{s1}{boolean}
 				\end{call}
-				\begin{sdblock}{alt}{[boolean == true]}
+				\begin{sdblock}{alt}{[boolean == false]}
 					\begin{messcall}{B}{false}{G}
 					\end{messcall} 					  		
 				\end{sdblock}
@@ -540,12 +540,12 @@
 		\begin{sequencediagram}
 			\newthread{G}{: Game}{}
 			\newinst[2]{B}{: Board}{}
-			\newinst[2]{S}{squares: Squares[ ][ ]}{}
+			\newinst[2]{S}{square: Square}{}
 			\newinst[2]{P}{currentPiece: Piece}{}
 			      
 			% refresh() call
 			\begin{call}{G}{refresh()}{B}{}	
-				\begin{sdblock}{loop}{[for each square]}
+				\begin{sdblock}{loop}{[for each square in squares]}
 					% isOccupied() call  	ø
 					\begin{call}{B}{isOccupied()}{S}{boolean}
 					\end{call}
